# boilerplate-fast-api

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
fastapi-app/: .env.template  main.py
fastapi-app/core/: config.py
fastapi-app/core/models/: db_helper.py
